# picograd

./: CMakeLists.txt  README.md  main.cpp  picograd.cpp  picograd.h
include/picograd/: value.h  value.hpp
test/: CMakeLists.txt  value_test.cpp
